# joes_rusty_messaging_app

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: cli_main.rs  main.rs
lib/: Cargo.toml
lib/src/: lib.rs
server/: Cargo.toml
server/.sqlx/: query-e3fa850db3fbdeefbc0e6ef0ef3093a092e16ea2287e5e11f924c59e8055c836.json
server/src/: main.rs
