[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "*"
lib = { path = "../lib"}
# owo-colors = "*"
serde_json = "*"
clap = { version = "*", features = ["derive"]}
eframe = { version = "*" }
egui = "*"
egui_extras = {version = "*", features = ["all_loaders"]}
image = {version = "*", features = ["gif"]}