[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib"}
serde_json = "*"
clap = { version = "*", features = ["derive"]}
owo-colors = "*"
num_cpus = "*"
sqlx = { version = "*", features = ["runtime-tokio", "postgres"]}
tokio = { version = "*", features = ["full"]}
futures = "*"